# eventforge-ai

./: README.md  app.py  pyproject.toml
backend/: main.py  orchestrator.py  state.py
backend/agents/: exhibitor_agent.py  gtm_agent.py  ops_agent.py  pricing_agent.py  speaker_agent.py  sponsor_agent.py  venue_agent.py
backend/tools/: data_loader.py  vector_store.py  web_search.py
src/eventforge/: main.py
src/eventforge/agents/: exhibitor_agent.py  final_agent.py  gtm_agent.py  ops_agent.py  pricing_agent.py  speaker_agent.py  sponsor_agent.py  venue_agent.py
src/eventforge/agents/base/: agent_registry.py  base_agent.py
src/eventforge/data/: venues.csv
src/eventforge/graph/: builder.py  nodes.py
src/eventforge/models/: schemas.py  state.py
src/eventforge/tools/: registry.py  vector_store.py  web_search.py
src/eventforge/utils/: grounding.py  llm_client.py  logging.py
